add /start command